--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,5 +13,9 @@
 			See the editor data in the console.
 			<button class="get-data" (click)="showEditorDataInConsole($event)">Get editor data</button>
 		</div>
+		<div class="row row-info">
+			Want to save this data?
+			<button class="save-editor-data" (click)="saveEditorData($event)">Save editor data</button>
+		</div>
 	</div>
 </main>
